--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,27 @@
     "name": "Tabulous",
     "version": "1.0",
     "permissions": [
-          "storage"
-        ],
-    "icons": { "16": "icon16.png",
-               "48": "icon48.png",
-              "128": "icon128.png" },
+      "storage"
+    ],
+    "icons": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    },
     "chrome_url_overrides" : {
         "newtab": "index.html"
     },
     "options_ui": {
-    "page": "options.html",
-    "chrome_style": false,
-    "open_in_tab": true
-  }
+      "page": "options.html",
+      "chrome_style": false,
+      "open_in_tab": true
+    },
+    "browser_action": {
+      "default_icon": {
+        "16": "icons/icon16.png",
+        "24": "icons/icon48.png",
+        "32": "icons/icon128.png"
+      },
+      "default_popup": "options.html"
+    }
 }
