--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
     "manifest_version": 2,
     "name": "Tabulous",
-    "version": "1.0",
+    "short_name": "Tabtabtabtab",
+    "version": "1.1",
     "permissions": [
       "storage"
     ],
